--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -166,10 +166,8 @@ body {
           <div class="carousel-item active title">
             <div class="container">
               <div class="carousel-caption text-left">
-                <h1>Welcome To Gmail Clone </h1>
-                <p>Developers: Gene Luong, Kerry Liu, Rafael Antipuesto, Ketan Ambati</p>
-                <p>Installation: $ pip install -r requirements.txt</p>
-                <p>Run Code: $ python3 main.py</p>
+                <h1>Welcome To MLK Library </h1>
+                <p>Developer: Gene Luong</p>
                 </div>
               </div>
             </div>
@@ -208,103 +206,6 @@ body {
             <p><a class="btn btn-secondary" href="{{url_for('delete_account')}}" role="button">Delete Account &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
-
-
-        <!-- START THE FEATURETTES -->
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">Send Email. <span class="text-muted">It'll blow your mind.</span></h2>
-            <p class="lead">1. Click 'Send Email' button</p>
-            <p class="lead">2. Enter the subject </p>
-            <p class="lead">3. Enter recipient email</p>
-            <p class="lead"> 4. Enter body </p>
-            <p class="lead">5. Press Send Button</p>
-            <p class="lead">Note: This may prompt a verification link in the terminal</p>
-            <p class="lead">Capable of searching emails.</p>
-          </div>
-          <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" src="https://cdn-icons-png.flaticon.com/512/2989/2989993.png" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Edit User Profile. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">1. Successfully login to your account</p>
-            <p class="lead">2. Click the 'Edit Profile' button at the top of the screen</p>
-            <p class="lead">3. Enter in the desired changes into the username and password text boxes</p>
-            <p class="lead">4. Click Save </p>
-            <p class="lead">5. The changes for the username can be seen in the home page adn changes for password can be seen when you login in again</p>
-          </div>
-          <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="https://media.istockphoto.com/id/1300845620/vector/user-icon-flat-isolated-on-white-background-user-symbol-vector-illustration.jpg?s=612x612&w=0&k=20&c=yBeyba0hUkh14_jgv1OKqIH0CCSWU_4ckRkAoy2p73o=">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">Add Calendar Events. <span class="text-muted">Mindblowing.</span></h2>
-            <p class="lead">1. Go to http://127.0.0.1:5000/home/</p>
-            <p class="lead">2. Click the 'Add Event To Calendar' button at the top of the screen</p>
-            <p class="lead">3. Enter in the Title, Start Time, End Time and Attendees (one for now)</p>
-            <p class="lead">4. Enter a description (optional)</p>
-            <p class="lead">5. Hit sent, this will update your gmail calendar</p>
-            <p class="lead">6. Make sure the End time is greater than the start time</p>
-            <p class="lead">Note: This may prompt a verification link in the terminal</p>
-            <p class="lead">Capable of sending reminder notifications to user</p>
-
-          </div>
-          <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" src="https://pixlok.com/wp-content/uploads/2021/10/calendar-icon-93nksnfie.png" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Create Tasks. <span class="text-muted">Check it out.</span></h2>
-            <p class="lead">1. After logged into your account, click on Create a Task</p>
-            <p class="lead">2. Enter the email address that you want the task to assign to</p>
-            <p class="lead">3. Enter the title for your task</p>
-            <p class="lead">4. Enter the task that you need to finish under that title. </p>
-            <p class="lead">5. You will be asked to sign in with your Gmail account for authenticaion.</p>
-            <p class="lead">6. Go to Gmail and you will see your task being added in your Gmail Task located on the right side of the Gmail inbox page.</p>
-          </div>
-          <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="https://icons.veryicon.com/png/o/miscellaneous/standard/task-32.png">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">Group Chat. <span class="text-muted">Build Connection.</span></h2>
-            <p class="lead">1. After logged in to your account, go to Chat Room</p>
-            <p class="lead">2. You will be able to see every user registered in the website</p>
-            <p class="lead">3. Choose the person you want to talk to by inputing their username</p>
-            <p class="lead">4. Enter the message you want to send</p>
-            <p class="lead">5. Click send</p>
-            <p class="lead">Capable of initiating chat and group chat function</p>
-
-          </div>
-          <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" src="https://pixlok.com/wp-content/uploads/2021/10/calendar-icon-93nksnfie.png" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <!-- /END THE FEATURETTES -->
-
       </div><!-- /.container -->
 
 
